# mafia-turbos

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/app/: database.rs  server.rs
src/app/server/: setup.rs  state.rs
src/builders/: webpage.rs
src/routes/: homepage.rs  mod.rs  whoami.rs
src/routes/chatroom/: data.rs  mod.rs
src/routes/login/: login_form.rs  mod.rs
src/routes/websocket/: chatbox.rs  data.rs  mod.rs
src/utils/: mod.rs  ws.rs
