[package]
name = "mafia-turbos"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
dotenv = "0.15.0"
maud = "0.27.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
    "migrate",
    "macros",
] }
anyhow = "1.0.99"
serde_json = "1.0.143"
once_cell = "1.21.3"
